added env variable config

--- a/gym-management-system.csproj
+++ b/gym-management-system.csproj
@@ -5,6 +5,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>gym_management_system</RootNamespace>
+    <UserSecretsId>4ffd5edf-8529-4580-bb65-daa8f7be5e78</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
+  </ItemGroup>
 
 </Project>
