finished auth views 1st version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,26 @@
 version: '3.8'
 
 services:
-  # Adminer for database management
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - "8080:8080"
+  # # Adminer for database management
+  # adminer:
+  #   image: adminer
+  #   restart: always
+  #   ports:
+  #     - "8080:8080"
     
     
-  # MySQL Service
-  mysql:
-    image: mysql:latest
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: gym_management
-      MYSQL_USER: user
-      MYSQL_PASSWORD: userpassword
-    ports:
-      - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
+  # # MySQL Service
+  # mysql:
+  #   image: mysql:latest
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: rootpassword
+  #     MYSQL_DATABASE: gym_management
+  #     MYSQL_USER: user
+  #     MYSQL_PASSWORD: userpassword
+  #   ports:
+  #     - "3306:3306"
+  #   volumes:
+  #     - mysql_data:/var/lib/mysql
 
   # MongoDB Service
   mongodb:
@@ -36,5 +36,5 @@ services:
       - mongodb_data:/data/db
       
 volumes:
-  mysql_data:
+  # mysql_data:
   mongodb_data:
