finished log in method, without password hashing

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 FOO=bar
-MONGODB_URI=mongodb://mongoadmin:mongoadminpassword@mongodb:27017
+MONGODB_URI=mongodb://mongoadmin:mongoadminpassword@localhost:27017
