--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,11 +29,12 @@ services:
       MONGO_INITDB_ROOT_USERNAME: mongoadmin
       MONGO_INITDB_ROOT_PASSWORD: mongoadminpassword
       MONGO_INITDB_DATABASE: gym_management_system
-      MONGO_INITDB_SCRIPT: /mongo/*.js
     ports:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
+      - ./mongo/:/docker-entrypoint-initdb.d/
+  
       
 volumes:
   # mysql_data:
